--- a/src/content/magic-docs/changelog.mdx
+++ b/src/content/magic-docs/changelog.mdx
@@ -11,7 +11,7 @@ Keep your customers informed with the latest updates and changes to your product
 <CodeBlock
     marginTop="8"
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const changelog = [
