--- a/src/content/magic-docs/roadmap.mdx
+++ b/src/content/magic-docs/roadmap.mdx
@@ -12,7 +12,7 @@ Keep your customers informed about the features and updates you plan to add to y
     marginTop="8"
     marginBottom="16"
     codeHeight={32}
-    codeInstances={[
+    codes={[
   {
     code:
 `const roadmap = [
@@ -78,7 +78,7 @@ You can change the available task types in the `task` object in the `roadmap.js`
     marginTop="8"
     marginBottom="16"
     codeHeight={32}
-    codeInstances={[
+    codes={[
   {
     code:
 `const task = {
