--- a/src/content/magic-docs/search.mdx
+++ b/src/content/magic-docs/search.mdx
@@ -21,7 +21,7 @@ You can extend the Kbar with custom functionalities by adding new items to the `
 <CodeBlock
     marginBottom="16"
     highlight={15}
-    codeInstances={[
+    codes={[
   {
     code:
 `const kbar = [
