--- a/src/content/magic-docs/seo.mdx
+++ b/src/content/magic-docs/seo.mdx
@@ -21,7 +21,7 @@ Social sharing images (open-graph and twitter) are automatically generated with 
 <CodeBlock
     marginBottom="16"
     highlight="4"
-    codeInstances={[
+    codes={[
       {
         code:
 `export async function generateMetadata() {
