--- a/src/content/magic-docs/sidebar.mdx
+++ b/src/content/magic-docs/sidebar.mdx
@@ -12,7 +12,7 @@ You can configure the sidebar width and collapsible behavior in the `layout` obj
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `sidebar: {
@@ -35,7 +35,7 @@ You can override the default section titles generated based on the directory nam
 <CodeBlock
     marginBottom="16"
     highlight="3"
-    codeInstances={[
+    codes={[
   {
     code:
 `{
@@ -67,7 +67,7 @@ You can display additional elements for each navigation element such as tag or i
 <CodeBlock
     marginBottom="16"
     highlight="5-8"
-    codeInstances={[
+    codes={[
   {
     code:
 `---
