--- a/src/content/magic-docs/styling.mdx
+++ b/src/content/magic-docs/styling.mdx
@@ -12,7 +12,7 @@ Magic Docs' styling is based on Once UI's customization through data-attributes.
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `theme:       'dark',         // dark | light
@@ -37,7 +37,7 @@ There's a pre-configured background in `layout.tsx` that you can modify in the c
 <CodeBlock
     codeHeight={24}
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const effects = {
@@ -89,7 +89,7 @@ The most important layout settings can be customized in the `layout` object in t
 <CodeBlock
     codeHeight={24}
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const layout = {
