--- a/src/content/magic-store/mailchimp.mdx
+++ b/src/content/magic-store/mailchimp.mdx
@@ -16,7 +16,7 @@ Create a new [embed form](https://mailchimp.com/help/add-a-signup-form-to-your-w
 
 <CodeBlock
     highlight="2"
-    codeInstances={[
+    codes={[
   {
     code:
 `const mailchimp = {
@@ -33,7 +33,7 @@ You can modify the headline and description in the `config.js` file.
 
 <CodeBlock
     highlight="3-4"
-    codeInstances={[
+    codes={[
   {
     code:
 `const newsletter = {
