--- a/src/content/magic-store/products.mdx
+++ b/src/content/magic-store/products.mdx
@@ -30,7 +30,7 @@ Featured products appear on the homepage in a carousel format. It's a way to hig
 
 Manage featured products in Magic Store's `resources/config.js` file:
 
-<CodeBlock marginBottom="16" highlight="3-6" codeInstances={[
+<CodeBlock marginBottom="16" highlight="3-6" codes={[
   {
     code:
 `const featuredProducts = [
