--- a/src/content/magic-store/promotions.mdx
+++ b/src/content/magic-store/promotions.mdx
@@ -18,7 +18,7 @@ You can use the banner to display promotions or discounts for your store. You ca
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const banner = {
