--- a/src/content/magic-store/size-guide.mdx
+++ b/src/content/magic-store/size-guide.mdx
@@ -13,7 +13,7 @@ Since the Fourthwall API doesn't return size guides, you need to add them manual
 <CodeBlock
     codeHeight={24}
     marginBottom="24"
-    codeInstances={[
+    codes={[
   {
     code:
 `const sizeGuide = {
