--- a/src/content/once-ui/components/accordion.mdx
+++ b/src/content/once-ui/components/accordion.mdx
@@ -11,7 +11,7 @@ A collapsible container that allows users to expand and collapse sections of con
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth>
       <Accordion title="Example" open>
         <Text onBackground="neutral-weak">Example content</Text>
@@ -21,7 +21,7 @@ A collapsible container that allows users to expand and collapse sections of con
       </Accordion>
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Column fillWidth>
