--- a/src/content/once-ui/components/accordionGroup.mdx
+++ b/src/content/once-ui/components/accordionGroup.mdx
@@ -11,7 +11,7 @@ A container component that groups multiple Accordion components together with co
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <AccordionGroup
       items={[
         {
@@ -29,7 +29,7 @@ A container component that groups multiple Accordion components together with co
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<AccordionGroup
