--- a/src/content/once-ui/components/arrow.mdx
+++ b/src/content/once-ui/components/arrow.mdx
@@ -11,7 +11,7 @@ A decorative arrow component that animates when a specified trigger element is h
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="16" horizontal="center">
       <Row id="arrow-trigger-1" padding="16" fitWidth radius="m" vertical="center">
         Simple usage
@@ -22,7 +22,7 @@ A decorative arrow component that animates when a specified trigger element is h
         <Arrow trigger="#arrow-trigger-2" color="onSolid" scale={1.2} />
       </Row>
     </Column>  }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Row id="arrow-trigger-1">
