--- a/src/content/once-ui/components/avatar.mdx
+++ b/src/content/once-ui/components/avatar.mdx
@@ -11,14 +11,14 @@ A versatile component for displaying user profile images, initials, or fallback 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <Avatar src="/images/avatar.jpg" size="l" />
       <Avatar size="l" value="Q" />
       <Avatar size="l" empty />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Row gap="16">
@@ -39,7 +39,7 @@ Use the T-shirt size model or set sizes with numbers (REM).
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth gap="24" center>
       <Row gap="16" horizontal="center" vertical="center">
         <Avatar size={1.5} value="A" />
@@ -57,7 +57,7 @@ Use the T-shirt size model or set sizes with numbers (REM).
       </Row>
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Row gap="16" center>
@@ -85,7 +85,7 @@ Use the T-shirt size model or set sizes with numbers (REM).
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <Avatar value="G" statusIndicator={{ color: "green" }} />
       <Avatar value="Y" statusIndicator={{ color: "yellow" }} />
@@ -93,7 +93,7 @@ Use the T-shirt size model or set sizes with numbers (REM).
       <Avatar value="G" statusIndicator={{ color: "gray" }} />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Row gap="16">
@@ -113,14 +113,14 @@ Use the T-shirt size model or set sizes with numbers (REM).
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" center>
       <Avatar size="l" loading />
       <Avatar size="m" loading />
       <Avatar size="s" loading />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Row gap="16">
