--- a/src/content/once-ui/components/avatarGroup.mdx
+++ b/src/content/once-ui/components/avatarGroup.mdx
@@ -11,7 +11,7 @@ A component for displaying multiple user avatars in a compact, horizontal stack.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <AvatarGroup
       size="l"
       reverse
@@ -24,7 +24,7 @@ A component for displaying multiple user avatars in a compact, horizontal stack.
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<AvatarGroup
@@ -50,7 +50,7 @@ AvatarGroup supports the same T-shirt sizing model as Avatar.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth gap="24">
       <AvatarGroup
         avatars={[
@@ -99,7 +99,7 @@ AvatarGroup supports the same T-shirt sizing model as Avatar.
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<AvatarGroup
@@ -124,7 +124,7 @@ Use the `limit` prop to control how many avatars are displayed. Any additional a
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth gap="24">
       <AvatarGroup
         avatars={[
@@ -152,7 +152,7 @@ Use the `limit` prop to control how many avatars are displayed. Any additional a
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<AvatarGroup
@@ -181,7 +181,7 @@ Use the `reverse` prop to change the stacking order of avatars.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth gap="24">
       <AvatarGroup
         avatars={[
@@ -203,7 +203,7 @@ Use the `reverse` prop to change the stacking order of avatars.
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<AvatarGroup
@@ -237,7 +237,7 @@ AvatarGroup supports all the same avatar types as the Avatar component.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <AvatarGroup
       avatars={[
         { src: "/images/avatar.jpg" },
@@ -248,7 +248,7 @@ AvatarGroup supports all the same avatar types as the Avatar component.
       size="m"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<AvatarGroup
