--- a/src/content/once-ui/components/background.mdx
+++ b/src/content/once-ui/components/background.mdx
@@ -11,7 +11,7 @@ A versatile component for creating decorative backgrounds with various visual ef
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Background
       height="200px"
       fillWidth
@@ -19,7 +19,7 @@ A versatile component for creating decorative backgrounds with various visual ef
       gradient={{ display: true, opacity: 0.5 }}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
@@ -42,7 +42,7 @@ Create beautiful gradient backgrounds with customizable position, size, and colo
   marginTop="16"
   previewPadding="0"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth height={16}>
       <Background
         fill
@@ -57,7 +57,7 @@ Create beautiful gradient backgrounds with customizable position, size, and colo
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
@@ -86,7 +86,7 @@ Add a dotted pattern to your backgrounds with customizable size, color, and opac
   marginTop="16"
   marginBottom="24"
   previewPadding="0"
-  codePreview={
+  preview={
     <Background
       height={16}
       fillWidth
@@ -98,7 +98,7 @@ Add a dotted pattern to your backgrounds with customizable size, color, and opac
       }}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
@@ -125,7 +125,7 @@ Create grid backgrounds with customizable color, opacity, and dimensions.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Background
       height="200px"
       fillWidth
@@ -139,7 +139,7 @@ Create grid backgrounds with customizable color, opacity, and dimensions.
       }}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
@@ -167,7 +167,7 @@ Add diagonal or straight lines to your backgrounds with customizable angle, thic
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth gap="16">
       <Background
         height="120px"
@@ -197,7 +197,7 @@ Add diagonal or straight lines to your backgrounds with customizable angle, thic
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
@@ -226,7 +226,7 @@ Combine multiple background effects to create unique and visually interesting ba
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Background
       height="200px"
       fillWidth
@@ -248,7 +248,7 @@ Combine multiple background effects to create unique and visually interesting ba
       }}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
@@ -284,7 +284,7 @@ Create a spotlight or reveal effect with the mask property.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Background
       height="200px"
       fillWidth
@@ -293,7 +293,7 @@ Create a spotlight or reveal effect with the mask property.
       mask={{ x: 50, y: 50, radius: 100 }}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Background
