--- a/src/content/once-ui/components/badge.mdx
+++ b/src/content/once-ui/components/badge.mdx
@@ -11,14 +11,14 @@ A versatile component for displaying highlighted information, labels, or interac
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" center>
       <Badge id="badge-1" title="New feature" effect={false} arrow={false} paddingX="12" paddingY="8" onBackground="brand-medium" background="brand-alpha-weak" textVariant="label-default-s" />
       <Badge id="badge-2" title="Coming soon" icon="calendar" arrow={false} paddingLeft="12" paddingRight="16" paddingY="8" onBackground="brand-medium" background="brand-medium" />
       <Badge id="badge-3" title="Learn more" textVariant="code-default-s" href="#"/>
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Badge id="badge-1" title="New feature" effect={false} arrow={false} paddingX="12" paddingY="8" onBackground="brand-medium" background="brand-alpha-weak" textVariant="label-default-s" />
@@ -37,14 +37,14 @@ Add icons to badges to enhance visual communication.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <Badge title="New release" icon="rocket" arrow={false} effect={false}/>
       <Badge title="Improved security" icon="check" arrow={false} effect={false}/>
       <Badge title="New: Dark mode" icon="dark" arrow={false} effect={false}/>
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Badge title="New release" icon="rocket" arrow={false} effect={false}/>
@@ -63,12 +63,12 @@ Badges can be made interactive by adding the `href` prop, turning them into link
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <Badge href="#" id="badge-4" title="Documentation" icon="pages" textVariant="label-default-s" />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Badge href="#" id="badge-4" title="Documentation" icon="pages" textVariant="label-default-s" />`,
@@ -85,13 +85,13 @@ Badges can be displayed without the arrow indicator by setting the `arrow` prop 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <Badge id="badge-5" title="With arrow"/>
       <Badge title="Without arrow" arrow={false} />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Badge id="badge-5" title="With arrow"/>
@@ -109,13 +109,13 @@ Disable the hover animation effect by setting the `effect` prop to `false`.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <Badge title="With effect" textVariant="label-default-s" icon="play" />
       <Badge title="Without effect" textVariant="label-default-s" icon="pause" effect={false} />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Badge title="With effect" icon="play" />
@@ -133,13 +133,13 @@ Badges can contain custom content using children instead of the `title` prop.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Badge id="badge-6" paddingY="4" paddingLeft="4" paddingRight="8" gap="12" textVariant="label-default-s" border="neutral-medium" background="neutral-alpha-weak">
       <Tag>New</Tag>
       Custom content
     </Badge>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Badge id="badge-6" paddingY="4" paddingLeft="4" paddingRight="8" gap="12" textVariant="label-default-s" border="neutral-medium" background="neutral-alpha-weak">
