--- a/src/content/once-ui/components/banner.mdx
+++ b/src/content/once-ui/components/banner.mdx
@@ -11,7 +11,7 @@ A simple component for displaying important announcements, notifications, or sta
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column fillWidth>
       <Banner>
         Free shipping on orders over $50
@@ -22,7 +22,7 @@ A simple component for displaying important announcements, notifications, or sta
     </Column>
   }
   previewPadding="0"
-  codeInstances={[
+  codes={[
     {
       code:
 `<Banner>
@@ -42,7 +42,7 @@ Add icons to enhance visual communication.
   marginTop="16"
   marginBottom="24"
   previewPadding="8"
-  codePreview={
+  preview={
     <Column fillWidth gap="8">
       <Banner radius="s">
         <Icon name="check" size="s" /> Claim your free credits.
@@ -52,7 +52,7 @@ Add icons to enhance visual communication.
       </Row>
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Banner radius="s">
@@ -76,7 +76,7 @@ Customize the appearance of banners using Flex props.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="16" fillWidth>
       <Banner radius="s" border="success-medium" background="success-weak" onBackground="success-medium">
         <Icon name="check" size="s" />
@@ -92,7 +92,7 @@ Customize the appearance of banners using Flex props.
       </Banner>
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Banner solid="success-medium" onSolid="success-strong">
@@ -123,7 +123,7 @@ Add interactive elements to banners.
   marginTop="16"
   marginBottom="24"
   previewPadding="0"
-  codePreview={
+  preview={
     <Column fillWidth>
       <Banner horizontal="space-between">
         Accept our privacy policy to continue.
@@ -137,7 +137,7 @@ Add interactive elements to banners.
       </Row>
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Banner horizontal="space-between">
