--- a/src/content/once-ui/components/card.mdx
+++ b/src/content/once-ui/components/card.mdx
@@ -12,7 +12,7 @@ The `Card` component is a versatile, fluid container for content with a hover ef
   marginTop="16"
   marginBottom="24"
   codeHeight={24}
-  codePreview={
+  preview={
     <Row fillWidth horizontal="center">
       <Row maxWidth={24}>
         <Card radius="l-4" direction="column" border="neutral-alpha-medium">
@@ -59,7 +59,7 @@ The `Card` component is a versatile, fluid container for content with a hover ef
       </Row>
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       language: "tsx",
       label: "Card",
