--- a/src/content/once-ui/components/carousel.mdx
+++ b/src/content/once-ui/components/carousel.mdx
@@ -11,7 +11,7 @@ An interactive component for displaying a collection of images with smooth trans
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Carousel
       radius="l"
       images={[
@@ -20,7 +20,7 @@ An interactive component for displaying a collection of images with smooth trans
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Carousel
@@ -42,7 +42,7 @@ The Carousel supports two types of indicators for navigation: line (default) and
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="32" fillWidth>
       <Carousel
         indicator="line"
@@ -60,7 +60,7 @@ The Carousel supports two types of indicators for navigation: line (default) and
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Carousel
@@ -91,7 +91,7 @@ You can customize the aspect ratio of the carousel to fit your design needs.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Carousel
       aspectRatio="4 / 3"
       images={[
@@ -100,7 +100,7 @@ You can customize the aspect ratio of the carousel to fit your design needs.
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Carousel
