--- a/src/content/once-ui/components/compareImage.mdx
+++ b/src/content/once-ui/components/compareImage.mdx
@@ -9,7 +9,7 @@ navIcon: "components"
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <CompareImage
       radius="xl"
       border="neutral-alpha-weak"
@@ -19,7 +19,7 @@ navIcon: "components"
       rightContent={{ src: "/images/docs/once-ui/vibe-coding-dark.jpg", alt: "Right image - Vibe Coding dark" }}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<CompareImage
@@ -41,7 +41,7 @@ The `CompareImage` component supports `ReactNode` for the content.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <CompareImage
       style={{isolation: "isolate"}}
       radius="xl"
@@ -52,7 +52,7 @@ The `CompareImage` component supports `ReactNode` for the content.
       rightContent={{src: <Background center fill gradient={{display: true, x: 0, y: 50, colorStart: "accent-background-strong", colorEnd: "brand-background-weak"}}><Row zIndex="1">Right</Row></Background>}}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<CompareImage
