--- a/src/content/once-ui/components/cursorCard.mdx
+++ b/src/content/once-ui/components/cursorCard.mdx
@@ -11,7 +11,7 @@ A component that displays floating content that follows the user's cursor when h
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex fillWidth horizontal="center" padding="24" style={{position: "relative", zIndex: 999}}>
       <CursorCard
         placement="bottom-right"
@@ -66,7 +66,7 @@ A component that displays floating content that follows the user's cursor when h
       />
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<CursorCard
@@ -96,7 +96,7 @@ The CursorCard component supports different placement options to control how the
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row fillWidth gap="16" wrap horizontal="center" textVariant="label-default-s">
       <CursorCard
         placement="top-left"
@@ -139,7 +139,7 @@ The CursorCard component supports different placement options to control how the
       />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<CursorCard
