--- a/src/content/once-ui/components/dialog.mdx
+++ b/src/content/once-ui/components/dialog.mdx
@@ -15,10 +15,10 @@ A simple dialog with a title, description, and content.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <BasicDialog />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isOpen, setIsOpen] = useState(false);
@@ -60,10 +60,10 @@ Add a footer section to contain action buttons.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <DialogWithFooter />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isOpen, setIsOpen] = useState(false);
@@ -108,10 +108,10 @@ Dialogs can be stacked on top of each other for multi-step interactions.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <StackedDialogs />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isBaseOpen, setIsBaseOpen] = useState(false);
@@ -173,10 +173,10 @@ Dialogs can be customized with Flex props for different visual styles.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <CustomizedDialog />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isOpen, setIsOpen] = useState(false);
