--- a/src/content/once-ui/components/dropdown.mdx
+++ b/src/content/once-ui/components/dropdown.mdx
@@ -15,10 +15,10 @@ A simple dropdown container with options.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <BasicRawDropdown />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [selected, setSelected] = useState("");
@@ -67,10 +67,10 @@ Enhance dropdown options with icons for better visual communication.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <IconsRawDropdown />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [selected, setSelected] = useState("");
@@ -124,10 +124,10 @@ Add descriptive text to dropdown options for additional context.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <DescriptionRawDropdown />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [selected, setSelected] = useState("");
@@ -179,10 +179,10 @@ Customize the appearance of the dropdown with Flex props.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <CustomStyledRawDropdown />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [selected, setSelected] = useState("");
