--- a/src/content/once-ui/components/elementType.mdx
+++ b/src/content/once-ui/components/elementType.mdx
@@ -11,7 +11,7 @@ The ElementType component is a utility component that dynamically renders as dif
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `// Renders as a Next.js Link for internal navigation
@@ -46,7 +46,7 @@ ElementType automatically handles both internal and external links.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `// External link - renders as <a> with target="_blank"
@@ -71,7 +71,7 @@ ElementType renders as a button when provided with an onClick handler or type pr
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `// Renders as a button with onClick handler
@@ -96,7 +96,7 @@ When no interactive props are provided, `ElementType` renders as a `Flex` compon
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `// Renders as a Flex component
