--- a/src/content/once-ui/components/fade.mdx
+++ b/src/content/once-ui/components/fade.mdx
@@ -11,7 +11,7 @@ The Fade component creates a gradient fade effect that transitions from a base c
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex border="neutral-alpha-weak" fillWidth aspectRatio={4 / 3} radius="l" overflow="hidden">
       <Media sizes="640px" src="/images/docs/once-ui/vibe-coding-dark.jpg" />
       <Fade
@@ -34,7 +34,7 @@ The Fade component creates a gradient fade effect that transitions from a base c
       />
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Flex border="brand-alpha-medium" fillWidth aspectRatio={4 / 3} radius="l" overflow="hidden">
@@ -71,7 +71,7 @@ Control the direction of the fade effect.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex border="neutral-alpha-medium" fillWidth aspectRatio={4 / 3} radius="l" overflow="hidden" center align="center" background="neutral-alpha-weak" textVariant="display-strong-xl" padding="l">
       <Fade
         fill
@@ -83,7 +83,7 @@ Control the direction of the fade effect.
       Fade from left to right
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<>
@@ -109,7 +109,7 @@ Customize the base color of the fade effect.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex border="brand-alpha-medium" background="brand-medium" fillWidth aspectRatio={4 / 3} radius="l" overflow="hidden" center align="center" textVariant="display-strong-xl" padding="l">
       <Fade
         fill
@@ -122,7 +122,7 @@ Customize the base color of the fade effect.
       Match base color with background
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<>
@@ -149,7 +149,7 @@ Add a dot pattern to the fade effect.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex border="neutral-alpha-medium" background="neutral-strong" fillWidth aspectRatio={16 / 9} radius="l" overflow="hidden" center align="center" textVariant="display-strong-xl" padding="l">
       <Fade
         fill
@@ -163,7 +163,7 @@ Add a dot pattern to the fade effect.
       Dot pattern
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<>
@@ -191,7 +191,7 @@ Add a blur effect to the fade.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex border="neutral-alpha-medium" background="neutral-strong" fillWidth aspectRatio={16 / 9} radius="l" overflow="hidden" center align="center" textVariant="display-strong-xl" padding="l">
       <Fade
         fill
@@ -205,7 +205,7 @@ Add a blur effect to the fade.
       Blur size
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<>
