--- a/src/content/once-ui/components/logoCloud.mdx
+++ b/src/content/once-ui/components/logoCloud.mdx
@@ -11,7 +11,7 @@ The `LogoCloud` component is used to display a collection of logos in a grid lay
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <LogoCloud 
       logos={[
         { size: "m" },
@@ -26,7 +26,7 @@ The `LogoCloud` component is used to display a collection of logos in a grid lay
       limit={4}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<LogoCloud 
@@ -55,7 +55,7 @@ You can customize each logo by passing Logo component props to the items in the 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <LogoCloud 
       logos={[
         { size: "m", wordmark: false },
@@ -68,7 +68,7 @@ You can customize each logo by passing Logo component props to the items in the 
       gap="16"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<LogoCloud 
@@ -95,7 +95,7 @@ When you have more logos than the limit allows, the LogoCloud will automatically
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <LogoCloud 
       logos={[
         { size: "m" },
@@ -114,7 +114,7 @@ When you have more logos than the limit allows, the LogoCloud will automatically
       gap="16"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<LogoCloud 
@@ -147,7 +147,7 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <LogoCloud 
       logos={[
         { size: "s" },
@@ -159,7 +159,7 @@ The LogoCloud component extends the Grid component, so you can use all Grid prop
       gap="24"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<LogoCloud 
