--- a/src/content/once-ui/components/navIcon.mdx
+++ b/src/content/once-ui/components/navIcon.mdx
@@ -12,10 +12,10 @@ A simple yet effective component for creating hamburger menu icons that can togg
   marginTop="16"
   marginBottom="24"
   codeHeight={24}
-  codePreview={
+  preview={
     <NavIconToggle />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `"use client";
@@ -92,10 +92,10 @@ NavIcon has two states: `active` and `inactive`, controlled by the `isActive` pr
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <NavIconStates />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<NavIcon isActive={false} />
@@ -113,10 +113,10 @@ The NavIcon component accepts all the props of the `Flex` component, allowing fo
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <CustomNavIcon />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<NavIcon 
@@ -158,7 +158,7 @@ The NavIcon component includes a `tabIndex={0}` by default, making it keyboard a
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `<NavIcon 
