--- a/src/content/once-ui/components/option.mdx
+++ b/src/content/once-ui/components/option.mdx
@@ -11,13 +11,13 @@ The `Option` component represents a selectable item typically used within dropdo
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <ClientOption 
       label="Default option"
       value="default"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Option 
@@ -37,14 +37,14 @@ Add a description to provide additional context for the option.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <ClientOption 
       label="With description"
       description="This option has additional information"
       value="with-description"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Option 
@@ -65,7 +65,7 @@ Add icons or other elements before or after the option text.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="8">
       <ClientOption 
         label="With prefix"
@@ -79,7 +79,7 @@ Add icons or other elements before or after the option text.
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Option 
@@ -106,7 +106,7 @@ Options can be selected, highlighted, or marked as dangerous.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="8">
       <ClientOption 
         label="Selected option"
@@ -125,7 +125,7 @@ Options can be selected, highlighted, or marked as dangerous.
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Option 
@@ -158,14 +158,14 @@ Options can function as links by providing the `href` prop.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <ClientOption 
       label="Link option"
       value="link"
       href="#"
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Option 
