--- a/src/content/once-ui/components/scrollToTop.mdx
+++ b/src/content/once-ui/components/scrollToTop.mdx
@@ -11,12 +11,12 @@ Use this utility to improve navigation for long-scrolling pages. It's customizab
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <ScrollToTop offset={100} position="relative">
       <Button size="s" prefixIcon="arrowUp">Top</Button>
     </ScrollToTop>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<ScrollToTop offset={100}>
@@ -37,12 +37,12 @@ Define how far the user must scroll before the button becomes visible.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <ScrollToTop offset={400} position="relative">
       <IconButton icon="chevronUp"/>
     </ScrollToTop>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<ScrollToTop offset={500}>
@@ -61,12 +61,12 @@ The button can be customized using `Flex` props and additional `className`.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <ScrollToTop position="relative" offset={600} className="my-custom-style">
       <Button size="s" variant="secondary" prefixIcon="arrowUp">Top</Button>
     </ScrollToTop>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<ScrollToTop position="relative" className="my-custom-style">
