--- a/src/content/once-ui/components/scroller.mdx
+++ b/src/content/once-ui/components/scroller.mdx
@@ -11,7 +11,7 @@ The `Scroller` component creates a scrollable container with automatic navigatio
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Scroller fadeColor="transparent">
       <Row gap="16">
         {Array(10).fill(0).map((_, i) => (
@@ -27,7 +27,7 @@ The `Scroller` component creates a scrollable container with automatic navigatio
       </Row>
     </Scroller>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Scroller fadeColor="transparent">
@@ -50,7 +50,7 @@ The `Scroller` can be configured to scroll vertically by setting the `direction`
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Scroller direction="column" height={24} fadeColor="transparent">
       <Column gap="16" horizontal="center" fillWidth>
         {Array(6).fill(0).map((_, i) => (
@@ -66,7 +66,7 @@ The `Scroller` can be configured to scroll vertically by setting the `direction`
       </Column>
     </Scroller>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Scroller direction="column" height={24} fadeColor="transparent">
@@ -89,7 +89,7 @@ You can customize the color of the fade effect that appears behind the scroll bu
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Scroller fadeColor="brand-medium">
       <Row gap="16">
         {Array(10).fill(0).map((_, i) => (
@@ -105,7 +105,7 @@ You can customize the color of the fade effect that appears behind the scroll bu
       </Row>
     </Scroller>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Scroller fadeColor="brand-medium">
