--- a/src/content/once-ui/components/segmentedControl.mdx
+++ b/src/content/once-ui/components/segmentedControl.mdx
@@ -11,7 +11,7 @@ Use this component for toggle-style selection between discrete options. It suppo
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <SegmentedControl
       fillWidth={false}
       buttons={[
@@ -21,7 +21,7 @@ Use this component for toggle-style selection between discrete options. It suppo
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SegmentedControl
@@ -46,7 +46,7 @@ Use `defaultSelected` to define an initial active button in uncontrolled mode.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row fillWidth horizontal="center">
       <SegmentedControl
         fillWidth={false}
@@ -59,7 +59,7 @@ Use `defaultSelected` to define an initial active button in uncontrolled mode.
       />
       </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SegmentedControl
@@ -85,7 +85,7 @@ Control the selected value externally with the `selected` prop.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row fillWidth horizontal="center">
       <SegmentedControl
         fillWidth={false}
@@ -98,7 +98,7 @@ Control the selected value externally with the `selected` prop.
       />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SegmentedControl
@@ -124,7 +124,7 @@ Distribute the button widths evenly across the container.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <SegmentedControl
       buttons={[
         { value: "a", label: "A" },
@@ -133,7 +133,7 @@ Distribute the button widths evenly across the container.
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SegmentedControl
