--- a/src/content/once-ui/components/smartLink.mdx
+++ b/src/content/once-ui/components/smartLink.mdx
@@ -11,12 +11,12 @@ navIcon: "components"
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <SmartLink href="#" prefixIcon="link" suffixIcon="arrowRight">
       Learn more
     </SmartLink>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SmartLink href="#" prefixIcon="link" suffixIcon="arrowRight">
@@ -35,7 +35,7 @@ Use `fillWidth` to stretch the link across the container. It's useful when you'r
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <SmartLink href="#" fillWidth unstyled>
       <Row fillWidth background="surface" border="surface" radius="l" padding="16" horizontal="space-between" vertical="center">
         <Text>Full width link</Text>
@@ -43,7 +43,7 @@ Use `fillWidth` to stretch the link across the container. It's useful when you'r
       </Row>
     </SmartLink>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SmartLink href="#" fillWidth unstyled>
@@ -65,12 +65,12 @@ Disable default padding and visual treatments using `unstyled`.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <SmartLink href="#" unstyled>
       Raw link
     </SmartLink>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SmartLink href="#" unstyled>
@@ -89,12 +89,12 @@ Apply underline when `selected` is true.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <SmartLink href="#" selected>
       Active link
     </SmartLink>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<SmartLink href="#" selected>
