--- a/src/content/once-ui/components/spinner.mdx
+++ b/src/content/once-ui/components/spinner.mdx
@@ -11,10 +11,10 @@ Use `Spinner` to represent background loading states or async transitions in the
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Spinner />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Spinner />`,
@@ -31,7 +31,7 @@ Available in five size options to match layout context.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" center>
       <Spinner size="xs" />
       <Spinner size="s" />
@@ -40,7 +40,7 @@ Available in five size options to match layout context.
       <Spinner size="xl" />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Spinner size="xs" />
@@ -61,10 +61,10 @@ Customize the ARIA label for screen readers.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Spinner ariaLabel="Processing payment..." />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Spinner ariaLabel="Processing payment..." />`,
