--- a/src/content/once-ui/components/styleOverlay.mdx
+++ b/src/content/once-ui/components/styleOverlay.mdx
@@ -11,12 +11,12 @@ navIcon: "components"
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex fill height={40} horizontal="end" zIndex="4">
       <StyleOverlay zIndex="9"><Row paddingTop="8" paddingRight="12"><IconButton icon="sparkle" /></Row></StyleOverlay>
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<StyleOverlay>
@@ -37,7 +37,7 @@ Set any element as trigger for the overlay in the `children` prop.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Flex fill height={40} horizontal="end" zIndex="4">
       <StyleOverlay>
         <Row paddingTop="8" paddingRight="12">
@@ -46,7 +46,7 @@ Set any element as trigger for the overlay in the `children` prop.
       </StyleOverlay>
     </Flex>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<StyleOverlay>
