--- a/src/content/once-ui/components/stylePanel.mdx
+++ b/src/content/once-ui/components/stylePanel.mdx
@@ -11,10 +11,10 @@ navIcon: "components"
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <StylePanel />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<StylePanel />`,
