--- a/src/content/once-ui/config.mdx
+++ b/src/content/once-ui/config.mdx
@@ -16,7 +16,7 @@ Once UI imports Geist and Geist Mono by default with [Next/font](https://nextjs.
   marginTop="16"
   marginBottom="24"
   highlight="1-2,4,10"
-  codeInstances={[
+  codes={[
     {
       code:
 `import { Geist } from "next/font/google";
@@ -54,7 +54,7 @@ semantic HTML element, providing simple, seamless style overrides.
 <CodeBlock
     marginTop="8"
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `theme:       'dark',         // dark | light
@@ -87,7 +87,7 @@ in particular places in a generally sharp interface.
 Just add the `data-theme`, `data-neutral`, `data-brand`, `data-accent`, `data-border`, `data-surface`, `data-solid`, `data-solid-style`, `data-transition` or `data-scaling` attributes to any semantic HTML element to override its default style.
 
 <CodeBlock
-    codePreview={
+    preview={
 <Column
     overflow="hidden"
     data-theme="dark"
@@ -265,7 +265,7 @@ Just add the `data-theme`, `data-neutral`, `data-brand`, `data-accent`, `data-bo
   </Column>
     }
     highlight="2-3,5-6"
-    codeInstances={[
+    codes={[
         {
             code:
 `<Column
