--- a/src/content/once-ui/effects/glitchFx.mdx
+++ b/src/content/once-ui/effects/glitchFx.mdx
@@ -11,7 +11,7 @@ GlitchFx applies a glitch animation to any nested content. You can control the s
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <GlitchFx fillWidth speed="medium">
       <Column center fillWidth gap="8">
         <Media
@@ -30,7 +30,7 @@ GlitchFx applies a glitch animation to any nested content. You can control the s
       </Column>
     </GlitchFx>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<GlitchFx fillWidth speed="medium">
