--- a/src/content/once-ui/effects/holoFx.mdx
+++ b/src/content/once-ui/effects/holoFx.mdx
@@ -11,7 +11,7 @@ HoloFx simulates a holographic light sheen by layering interactive visual effect
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <HoloFx
       border="brand-alpha-weak"
       maxWidth={24}
@@ -47,7 +47,7 @@ HoloFx simulates a holographic light sheen by layering interactive visual effect
       </Fade>
     </HoloFx>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<HoloFx
