--- a/src/content/once-ui/effects/letterFx.mdx
+++ b/src/content/once-ui/effects/letterFx.mdx
@@ -11,7 +11,7 @@ LetterFx animates text character-by-character using randomized symbols that reso
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <span style={{ fontFamily: "var(--font-family-code)" }}>
       <LetterFx
         speed="medium"
@@ -22,7 +22,7 @@ LetterFx animates text character-by-character using randomized symbols that reso
       </LetterFx>
     </span>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<LetterFx
