--- a/src/content/once-ui/effects/tiltFx.mdx
+++ b/src/content/once-ui/effects/tiltFx.mdx
@@ -11,7 +11,7 @@ TiltFx creates a depth-based tilt animation that follows the user’s mouse curs
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <TiltFx border="brand-alpha-weak" maxWidth={24} aspectRatio={3 / 4} radius="l">
       <Media sizes="640px" src="/images/docs/once-ui/purple-worm.jpg" />
       <Flex
@@ -28,7 +28,7 @@ TiltFx creates a depth-based tilt animation that follows the user’s mouse curs
       </Flex>
     </TiltFx>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<TiltFx aspectRatio={3 / 4} radius="l">
