--- a/src/content/once-ui/form-controls/interactiveDetails.mdx
+++ b/src/content/once-ui/form-controls/interactiveDetails.mdx
@@ -11,7 +11,7 @@ The InteractiveDetails component is a utility component used to display labels a
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="16">
       <InteractiveDetails 
         label="Basic label" 
@@ -29,7 +29,7 @@ The InteractiveDetails component is a utility component used to display labels a
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<InteractiveDetails 
@@ -61,7 +61,7 @@ InteractiveDetails is primarily used as a building block for form controls like 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="16">
       <Checkbox 
         label="Checkbox with InteractiveDetails"
@@ -73,7 +73,7 @@ InteractiveDetails is primarily used as a building block for form controls like 
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Checkbox 
@@ -98,7 +98,7 @@ Add a help tooltip to provide additional information about the form control.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="16">
       <InteractiveDetails 
         label="With tooltip on top"
@@ -118,7 +118,7 @@ Add a help tooltip to provide additional information about the form control.
       />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<InteractiveDetails 
