--- a/src/content/once-ui/icons.mdx
+++ b/src/content/once-ui/icons.mdx
@@ -19,7 +19,7 @@ the imports and update the object values in the export.
   marginTop="16"
   marginBottom="24"
   highlight="4,13"
-  codeInstances={[
+  codes={[
   {
     code:
 `import { IconType } from 'react-icons';
@@ -57,7 +57,7 @@ inserting icons through this component.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `<Icon
@@ -67,7 +67,7 @@ inserting icons through this component.
     language: "tsx",
     label: "Example",}
   ]}
-  codePreview={<Row gap="24" wrap>
+  preview={<Row gap="24" wrap>
       <Icon name="rocket" size="m" />
       <Icon name="close" size="m" />
       <Icon name="check" size="m" />
