--- a/src/content/once-ui/installation.mdx
+++ b/src/content/once-ui/installation.mdx
@@ -19,7 +19,7 @@ Once UI is licensed under the MIT license.
 
 Create a new Once UI app with our CLI tool. It will clone the latest version and install the dependencies:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "npx create-once-ui-app@latest my-app",
     language: "bash"
@@ -28,7 +28,7 @@ Create a new Once UI app with our CLI tool. It will clone the latest version and
 
 Start the local development server:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "npm run dev",
     language: "bash"
