--- a/src/content/once-ui/modules/megaMenu.mdx
+++ b/src/content/once-ui/modules/megaMenu.mdx
@@ -11,7 +11,7 @@ Use `MegaMenu` for complex navigational layouts where primary sections include s
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <MegaMenu
       menuGroups={[
         {
@@ -41,7 +41,7 @@ Use `MegaMenu` for complex navigational layouts where primary sections include s
       ]}
     />
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<MegaMenu
