--- a/src/content/magic-docs/pages.mdx
+++ b/src/content/magic-docs/pages.mdx
@@ -13,7 +13,7 @@ Magic Docs' `RouteGuard` component takes care of conditionally rendering pages b
 <CodeBlock
     marginBottom="16"
     highlight="3"
-    codeInstances={[
+    codes={[
   {
     code:
 `const routes = {
@@ -38,7 +38,7 @@ Frontmatter is used to set the page's metadata: title, summary, updatedAt, navLa
 <CodeBlock
     marginBottom="16"
     highlight="11-12"
-    codeInstances={[
+    codes={[
       {
         code:
 `---
