--- a/src/content/magic-portfolio/blog.mdx
+++ b/src/content/magic-portfolio/blog.mdx
@@ -16,7 +16,7 @@ The frontmatter is used to set the post's metadata: title, description, image, a
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
       {
         code:
 `---
@@ -43,7 +43,7 @@ You can use custom components in MDX files, but you need to import them first in
 <CodeBlock
     marginBottom="16"
     highlight="11-12"
-    codeInstances={[
+    codes={[
       {
         code:
 `const components = {
