--- a/src/content/magic-portfolio/content.mdx
+++ b/src/content/magic-portfolio/content.mdx
@@ -21,7 +21,7 @@ Replace the content in the `resources/content.js` file with your own content. Yo
 <CodeBlock
     marginBottom="16"
     highlight="1-2"
-    codeInstances={[
+    codes={[
   {
     code:
 `import { InlineCode } from "@/once-ui/components";
@@ -44,7 +44,7 @@ Your personal details are used across the whole app to render personalized headi
 <CodeBlock
     marginBottom="16"
     highlight="2-3,7-10"
-    codeInstances={[
+    codes={[
   {
     code:
 `const person = {
@@ -69,7 +69,7 @@ Social links are rendered on the `/about` page and in the footer based on the ar
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const social = [
@@ -95,7 +95,7 @@ Each page have it's own object that manages the personalized content, such as he
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const home = {
