--- a/src/content/magic-portfolio/mailchimp.mdx
+++ b/src/content/magic-portfolio/mailchimp.mdx
@@ -16,7 +16,7 @@ Create a new [embed form](https://mailchimp.com/help/add-a-signup-form-to-your-w
 
 <CodeBlock
     highlight="2"
-    codeInstances={[
+    codes={[
   {
     code:
 `const mailchimp = {
@@ -36,7 +36,7 @@ You can modify the headline and description in the `content.js` file.
 
 <CodeBlock
     highlight="2"
-    codeInstances={[
+    codes={[
   {
     code:
 `const newsletter = {
@@ -60,7 +60,7 @@ There's a pre-configured background in `Mailchimp.tsx` that you can modify in th
 <CodeBlock
     codeHeight={24}
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const mailchimp = {
