--- a/src/content/magic-portfolio/pages.mdx
+++ b/src/content/magic-portfolio/pages.mdx
@@ -13,7 +13,7 @@ Magic Portfolio's `RouteGuard` component takes care of conditionally rendering p
 <CodeBlock
     marginBottom="16"
     highlight="6"
-    codeInstances={[
+    codes={[
   {
     code:
 `const routes = {
@@ -37,7 +37,7 @@ When creating a new page, it needs to be added to the `routes` object in the `re
 <CodeBlock
     marginBottom="16"
     highlight="6"
-    codeInstances={[
+    codes={[
   {
     code:
 `const routes = {
