--- a/src/content/magic-portfolio/quick-start.mdx
+++ b/src/content/magic-portfolio/quick-start.mdx
@@ -21,7 +21,7 @@ Subscribe to the [Once UI Pro plan](https://once-ui.com/pricing) to extend the l
 
 Clone the git repository:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "git clone https://github.com/once-ui-system/magic-portfolio.git",
     language: "bash"
@@ -30,7 +30,7 @@ Clone the git repository:
 
 Install the necessary dependencies:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "npm install",
     language: "bash"
@@ -39,7 +39,7 @@ Install the necessary dependencies:
 
 Start the local development server:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "npm run dev",
     language: "bash"
