--- a/src/content/magic-portfolio/work.mdx
+++ b/src/content/magic-portfolio/work.mdx
@@ -16,7 +16,7 @@ The frontmatter is used to set the project's metadata: title, description, image
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
       {
         code:
 `---
@@ -50,7 +50,7 @@ You can use custom components in MDX files, but you need to import them first in
 <CodeBlock
     marginBottom="16"
     highlight="11-12"
-    codeInstances={[
+    codes={[
       {
         code:
 `const components = {
