--- a/src/content/magic-store/quick-start.mdx
+++ b/src/content/magic-store/quick-start.mdx
@@ -21,7 +21,7 @@ Magic Store is licensed under the [Dopler CC license](https://once-ui.com/produc
 
 Clone the git repository:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "git clone https://github.com/once-ui-system/magic-store.git",
     language: "bash"
@@ -30,7 +30,7 @@ Clone the git repository:
 
 Install the necessary dependencies:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "npm install",
     language: "bash"
@@ -39,7 +39,7 @@ Install the necessary dependencies:
 
 Start the local development server:
 
-<CodeBlock compact marginBottom="16" codeInstances={[
+<CodeBlock compact marginBottom="16" codes={[
   {
     code: "npm run dev",
     language: "bash"
@@ -53,7 +53,7 @@ Start the local development server:
 3. After you have signed up, [get a storefront token](https://my-shop.fourthwall.com/admin/dashboard/settings/for-developers).
 4. Fill out the environment variables below in `.env.local`:
 
-<CodeBlock marginBottom="16" codeInstances={[
+<CodeBlock marginBottom="16" codes={[
   {
     code: `NEXT_PUBLIC_FW_STOREFRONT_TOKEN="<your storefront token>" # Example: ptkn_...
 NEXT_PUBLIC_FW_CHECKOUT="<your store url>" # Example: vercel-shop.fourthwall.com. Used for checkout
