--- a/src/content/magic-store/styling.mdx
+++ b/src/content/magic-store/styling.mdx
@@ -12,7 +12,7 @@ Magic Store's styling is based on Once UI's customization through data-attribute
 
 <CodeBlock
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `theme:       'dark',         // dark | light
@@ -37,7 +37,7 @@ There's a pre-configured background in `layout.tsx` that you can modify in the c
 <CodeBlock
     codeHeight={24}
     marginBottom="16"
-    codeInstances={[
+    codes={[
   {
     code:
 `const effects = {
