--- a/src/content/once-ui/components.mdx
+++ b/src/content/once-ui/components.mdx
@@ -15,7 +15,7 @@ Use the following boilerplate to build Once UI components:
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codeInstances={[
+  codes={[
     {
       code:
 `"use client";
