--- a/src/content/once-ui/components/dropdownWrapper.mdx
+++ b/src/content/once-ui/components/dropdownWrapper.mdx
@@ -15,12 +15,12 @@ A simple dropdown with a button trigger and custom content.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row fillWidth height={10} horizontal="center" vertical="start">
       <BasicDropdown />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isOpen, setIsOpen] = useState(false);
@@ -78,12 +78,12 @@ Control the placement of the dropdown relative to its trigger element.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row fillWidth height={10} horizontal="center" vertical="start">
       <CustomPositionDropdown />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isOpen, setIsOpen] = useState(false);
@@ -136,12 +136,12 @@ Control the dimensions of the dropdown menu.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row fillWidth height={10} horizontal="center" vertical="start">
       <SearchableDropdown />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `const [isOpen, setIsOpen] = useState(false);
