--- a/src/content/once-ui/components/line.mdx
+++ b/src/content/once-ui/components/line.mdx
@@ -11,14 +11,14 @@ The Line component is used to create horizontal or vertical divider lines with c
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="24" fillWidth horizontal="center">
       <Line />
       <Text variant="code-default-m">Content between lines</Text>
       <Line />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Line />
@@ -37,14 +37,14 @@ Use the `vert` prop to create a vertical line instead of a horizontal one.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="32" height="80" center>
       <Text>Left side</Text>
       <Line vert height="80" />
       <Text>Right side</Text>
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Row gap="32" height="80" center>
@@ -65,7 +65,7 @@ The Line component inherits all Flex props, allowing for customization of its ap
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="32" paddingY="24" fillWidth>
       <Line background="brand-strong" />
       <Line background="accent-strong" />
@@ -73,7 +73,7 @@ The Line component inherits all Flex props, allowing for customization of its ap
       <Line background="warning-strong" />
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Line background="brand-strong" />
@@ -93,14 +93,14 @@ Add margin to create space around the line.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Column gap="8" fillWidth>
       <Text>Content above line</Text>
       <Line marginY="16" />
       <Text>Content below line</Text>
     </Column>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<Text>Content above line</Text>
