--- a/src/content/once-ui/components/statusIndicator.mdx
+++ b/src/content/once-ui/components/statusIndicator.mdx
@@ -11,14 +11,14 @@ Use `StatusIndicator` to show online/offline presence, availability, or categori
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" horizontal="center">
       <StatusIndicator color="green" />
       <StatusIndicator color="red" />
       <StatusIndicator color="yellow" />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<StatusIndicator color="green" />
@@ -37,14 +37,14 @@ Choose from small, medium, or large to fit the surrounding layout.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row gap="16" center>
       <StatusIndicator size="s" color="blue" />
       <StatusIndicator size="m" color="blue" />
       <StatusIndicator size="l" color="blue" />
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<StatusIndicator size="s" color="blue" />
@@ -63,7 +63,7 @@ Supports full Once UI palette for flexibility.
 <CodeBlock
   marginTop="16"
   marginBottom="24"
-  codePreview={
+  preview={
     <Row wrap gap="12">
       {[
         "blue", "indigo", "violet", "magenta", "pink",
@@ -74,7 +74,7 @@ Supports full Once UI palette for flexibility.
       ))}
     </Row>
   }
-  codeInstances={[
+  codes={[
     {
       code:
 `<StatusIndicator color="blue" />
