--- a/src/content/once-ui/components/themeSwitcher.mdx
+++ b/src/content/once-ui/components/themeSwitcher.mdx
@@ -1,9 +1,62 @@
 ---
 title: "ThemeSwitcher"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
-updatedAt: "2025-05-04"
-navLabel: "ThemeSwitcher"
-navIcon: "learn"
+summary: "ThemeSwitcher is a compact toggle group for switching between light, dark, and system themes using icon buttons."
+updatedAt: "2025-05-09"
+navLabel: "Theme Switcher"
+navIcon: "components"
 ---
 
-## Coming soon
+Use `ThemeSwitcher` to provide users with a quick way to toggle between themes. It integrates with `ThemeProvider` and uses `useTheme()` under the hood.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <ThemeSwitcher />
+  }
+  codes={[
+    {
+      code:
+`<ThemeSwitcher />`,
+      language: "tsx",
+      label: "ThemeSwitcher"
+    }
+  ]}
+/>
+
+## Behavior
+
+- Highlights the active theme using the `"primary"` variant.
+- Automatically updates the global theme via `useTheme().setTheme`.
+- Renders a row of three icons: `system`, `dark`, `light`.
+
+## Custom layout
+
+Pass any valid `Row` props to control spacing, padding, layout, etc.
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <ThemeSwitcher direction="column" padding="4" gap="8" background="surface" border="surface" radius="full" />
+  }
+  codes={[
+    {
+      code:
+`<ThemeSwitcher direction="column" padding="4" gap="8" background="surface" border="surface" radius="full" />`,
+      language: "tsx",
+      label: "Custom style"
+    }
+  ]}
+/>
+
+## API reference
+
+<PropsTable
+  content={[
+    ["ref", "HTMLDivElement"],
+    ["className"],
+    ["style"],
+    ["...flex"]
+  ]}
+/>
